# Epilogger

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  LoggableException.cpp  README.md
.github/workflows/: documentation.yml
Src/: CMakeLists.txt  LoggableException.hpp  Logger.cpp  Logger.hpp
